[package]
name = "poscan-consensus"
version = "3.0.0"
edition = "2018"
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
repository = 'https://github.com/substrate-developer-hub/recipes'
description = 'A Substrate node with PoW authoring and PoA finality'
license = "GPL-3.0-or-later"

[[bin]]
name = "poscan-consensus"
path = "src/main.rs"

[dependencies]
ctrlc = { version = "3.1.3", features = ["termination"] }
derive_more = "0.99"
exit-future = "0.2.0"
futures = "0.3.1"
futures01 = { package = "futures", version = "0.1.29" }
log = "0.4.8"
clap = { version = "3.1", features = ["derive"] }
tokio = "1.19"
trie-root = "0.15.2"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = { version = "0.9.3", default-features = false, features = ["mutex", "spin_mutex"] }
async-trait = "0.1.50"
jsonrpsee = { version = "0.14.0", features = ["server"] }


# Substrate packages
sc-basic-authorship = { git = "https://github.com/paritytech/substrate" }
sc-cli = { git = "https://github.com/paritytech/substrate" }
sc-client-api = { git = "https://github.com/paritytech/substrate" }
sc-consensus = { git = "https://github.com/paritytech/substrate" }
sc-executor = { git = "https://github.com/paritytech/substrate" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate" }
sc-network = { git = "https://github.com/paritytech/substrate" }
sc-rpc = { git = "https://github.com/paritytech/substrate" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate" }
sc-service = { git = "https://github.com/paritytech/substrate" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate" }
sc-keystore = { git = "https://github.com/paritytech/substrate" }
sp-api = { git = "https://github.com/paritytech/substrate" }
sp-consensus = { git = "https://github.com/paritytech/substrate" }
sp-block-builder = { git = "https://github.com/paritytech/substrate" }
sp-blockchain = { git = "https://github.com/paritytech/substrate" }
sp-std = { git = "https://github.com/paritytech/substrate" }
sp-core = { git = "https://github.com/paritytech/substrate" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate" }
sp-inherents = { git = "https://github.com/paritytech/substrate" }
sp-io = { git = "https://github.com/paritytech/substrate" }
sp-runtime = { git = "https://github.com/paritytech/substrate" }
sp-timestamp = { git = "https://github.com/paritytech/substrate" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate" }
sp-keystore = { git = "https://github.com/paritytech/substrate" }
sc-telemetry = { git = "https://github.com/paritytech/substrate" }

substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", package = "substrate-frame-rpc-system" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", package = "pallet-transaction-payment-rpc" }
pallet-contracts-rpc = { git = "https://github.com/paritytech/substrate", package = "pallet-contracts-rpc" }

# local packages
runtime = { package = "poscan-runtime", path = "../../runtime" }
poscan-grid2d = { path = '../../consensus/poscan_grid2d' }
sc-consensus-poscan = { path = "../../consensus/poscan" }
sp-consensus-poscan = { path = "../../primitives/consensus/poscan" }
pallet-poscan = { path = "../../pallets/poscan", default-features = false }

frame-benchmarking = { git = "https://github.com/paritytech/substrate" }

[build-dependencies]
substrate-build-script-utils = '3.0'
vergen = "3.0.4"
