[package]
name = "pallet-asset-conversion"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME asset conversion pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1", default-features = false }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7", optional = true }
scale-info = { version = "2.0", default-features = false, features = ["derive"] }
sp-api = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
sp-arithmetic = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }

poscan-api = { default-features = false, path = "../../traits/poscan" }

#[dev-dependencies]
#pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
#pallet-assets = { package = "pallet-poscan-assets", version = "4.0.0-dev", path = "../poscan-assets" }
#primitive-types = { version = "0.12.0", default-features = false, features = ["codec", "scale-info", "num-traits"] }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-std/std",
	"sp-runtime/std",
	"sp-arithmetic/std",
#	"pallet-assets/std",
#	"pallet-balances/std",
	"sp-api/std",
	"sp-core/std",
	"sp-io/std",
	"poscan-api/std",
]
#runtime-benchmarks = [
#	"frame-benchmarking/runtime-benchmarks",
#	"frame-system/runtime-benchmarks",
#	"sp-runtime/runtime-benchmarks",
#	"frame-support/runtime-benchmarks",
#	"pallet-assets/runtime-benchmarks",
#	"pallet-balances/runtime-benchmarks"
#]
#try-runtime = [
#	"frame-support/try-runtime",
#	"frame-system/try-runtime",
#	"pallet-assets/try-runtime",
#	"pallet-balances/try-runtime",
#	"sp-runtime/try-runtime"
#]
