[package]
name = "pallet-asset-rate"
version = "4.0.0-dev"
description = "Whitelist non-native assets for treasury spending and provide conversion to native balance"
authors = ["William Freudenberger <w.freude@icloud.com>"]
homepage = "https://substrate.io"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/paritytech/substrate/"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7", default-features = false, package = "frame-benchmarking", optional = true }
frame-support = { git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7", package = "frame-support", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7", package = "frame-system", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7", package = "sp-runtime", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7", package = "sp-std", default-features = false }
sp-core = { optional = true, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7", package = "sp-core", default-features = false }

poscan-api = { default-features = false, path = "../../traits/poscan" }

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7", package = "pallet-balances", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7", package = "sp-io", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7", package = "sp-core", default-features = false }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"scale-info/std",
	"sp-core?/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"sp-core",
	"sp-runtime/runtime-benchmarks",
]
