[package]
name = "pallet-atomic-swap"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME atomic swap pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = { default-features = false, version = '0.4.17'}
codec = { package = "parity-scale-codec", version = "3.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

frame-support = { git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7", package = "frame-support", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7", package = "frame-system", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7", package = "sp-core", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7", package = "sp-io", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7", package = "sp-runtime", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7", package = "sp-std", default-features = false }

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7", package = "pallet-balances", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
try-runtime = ["frame-support/try-runtime"]
