[package]
name = "pallet-difficulty"
version = "2.8.0"
authors = ["Wei Tang <wei@that.world>"]
license = "GPL-3.0-or-later"
edition = "2018"
description = "Difficulty adjustment module for Kulupu."

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "3.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.0", default-features = false, features = ["derive"] }
sp-std = { default-features = false, git = "https://github.com/3Dpass/substrate.git", tag = "monthly-2022-05" }
sp-core = { default-features = false, git = "https://github.com/3Dpass/substrate.git", tag = "monthly-2022-05" }
sp-runtime = { default-features = false, git = "https://github.com/3Dpass/substrate.git", tag = "monthly-2022-05" }
sp-timestamp = { default-features = false, git = "https://github.com/3Dpass/substrate.git", tag = "monthly-2022-05" }
frame-system = { default-features = false, git = "https://github.com/3Dpass/substrate.git", tag = "monthly-2022-05" }
frame-support = { default-features = false, git = "https://github.com/3Dpass/substrate.git", tag = "monthly-2022-05" }
pallet-timestamp = { default-features = false, git = "https://github.com/3Dpass/substrate.git", tag = "monthly-2022-05" }
sp-consensus-poscan = { path = "../../primitives/consensus/poscan", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-timestamp/std",
	"frame-system/std",
	"frame-support/std",
	"pallet-timestamp/std",
	"sp-consensus-poscan/std",
]
