[package]
name = "pallet-lockdrop"
version = "2.8.0"
authors = ["Wei Tang <wei@that.world>"]
license = "GPL-3.0-or-later"
edition = "2018"
description = "A generic lockdrop module."

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.1", default-features = false, features = ["derive"] }
sp-std = { version="3.0", default-features = false, git = "https://github.com/3Dpass/substrate.git", branch = "3dp_v3" }
sp-runtime = { version="3.0", default-features = false, git = "https://github.com/3Dpass/substrate.git", branch = "3dp_v3" }
frame-system = { version="3.0", default-features = false, git = "https://github.com/3Dpass/substrate.git", branch = "3dp_v3" }
frame-support = { version="3.0", default-features = false, git = "https://github.com/3Dpass/substrate.git", branch = "3dp_v3" }

frame-benchmarking = { version="3.0", default-features = false, optional = true }

[dev-dependencies]
sp-core = { version="3.0", default-features = false, git = "https://github.com/3Dpass/substrate.git", branch = "3dp_v3" }
sp-io = { version="3.0", default-features = false, git = "https://github.com/3Dpass/substrate.git", branch = "3dp_v3" }
pallet-balances = { version="3.0", default-features = false, git = "https://github.com/3Dpass/substrate.git", branch = "3dp_v3" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-system/std",
	"frame-support/std",
	"frame-benchmarking/std",
]
runtime-benchmarks = ["frame-benchmarking"]
