[package]
name = "pallet-lockdrop"
version = "2.8.0"
authors = ["Wei Tang <wei@that.world>"]
license = "GPL-3.0-or-later"
edition = "2018"
description = "A generic lockdrop module."

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "3.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.0", default-features = false, features = ["derive"] }
sp-std = { default-features = false, git = "https://github.com/3Dpass/substrate.git", tag = "monthly-2022-05" }
sp-runtime = { default-features = false, git = "https://github.com/3Dpass/substrate.git", tag = "monthly-2022-05" }
frame-system = { default-features = false, git = "https://github.com/3Dpass/substrate.git", tag = "monthly-2022-05" }
frame-support = { default-features = false, git = "https://github.com/3Dpass/substrate.git", tag = "monthly-2022-05" }

frame-benchmarking = { default-features = false, optional = true, git = "https://github.com/3Dpass/substrate.git", tag = "monthly-2022-05" }

[dev-dependencies]
sp-core = { default-features = false, git = "https://github.com/3Dpass/substrate.git", tag = "monthly-2022-05" }
sp-io = { default-features = false, git = "https://github.com/3Dpass/substrate.git", tag = "monthly-2022-05" }
pallet-balances = { default-features = false, git = "https://github.com/3Dpass/substrate.git", tag = "monthly-2022-05" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-system/std",
	"frame-support/std",
	"frame-benchmarking/std",
]
runtime-benchmarks = ["frame-benchmarking"]
