[package]
name = "pallet-poscan"
version = "0.0.1"
description = "FRAME pallet template for defining custom runtime logic."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io/"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.1.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
frame-support = { default-features = false, version = "3.0", git = "https://github.com/3Dpass/substrate.git", branch = "3dp_v3" }
frame-system = { default-features = false, version = "3.0", git = "https://github.com/3Dpass/substrate.git", branch = "3dp_v3" }
frame-benchmarking = { default-features = false, version = "3.0", optional = true }
sp-std = { version = '3.0', default-features = false, git = "https://github.com/3Dpass/substrate.git", branch = "3dp_v3" }
#lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
#spin = { version = "0.9.3", default-features = false, features = ["mutex", "spin_mutex"] }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"sp-std/std",
]

# runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
# try-runtime = ["frame-support/try-runtime"]
