[package]
name = "pallet-referenda"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME pallet for inclusive on-chain decisions"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
assert_matches = { version = "1.5", optional = true }
codec = { package = "parity-scale-codec", version = "3.0.3", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.136", features = ["derive"], optional = true }
sp-arithmetic = { default-features = false, git = "tps://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
frame-benchmarking = { default-features = false, optional = true, git = "tps://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
frame-support = { default-features = false, git = "tps://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
frame-system = { default-features = false, git = "tps://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
sp-io = { default-features = false, git = "tps://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
sp-runtime = { default-features = false, git = "tps://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
sp-std = { default-features = false, git = "tps://github.com/paritytech/substrate", rev = "b0777b4c7f7" }

[dev-dependencies]
assert_matches = { version = "1.5" }
pallet-balances = { default-features = false, git = "tps://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
pallet-preimage = { default-features = false, git = "tps://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
pallet-scheduler = { default-features = false, git = "tps://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
sp-core = { default-features = false, git = "tps://github.com/paritytech/substrate", rev = "b0777b4c7f7" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"sp-runtime/std",
	"sp-arithmetic/std",
	"frame-system/std",
	"scale-info/std",
	"serde",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
runtime-benchmarks = [
	"assert_matches",
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
